Add comment about PayPal

--- a/donate.html
+++ b/donate.html
@@ -71,6 +71,8 @@
 
 <h2>PayPal</h2>
 <div class="text">Unfortunately, PayPal donations are not accepted to Russian accounts.</div>
+<!--<img src="./img/email.png">-->
+<div class="text">If you can't use <a href="#yandex">Yandex.Money</a> or other methods please <a href="email:ConEmu.Maximus5@gmail.com">contact me</a> and I will send you my dedicated PayPal address.</div>
 <div class="text">There is an <a href="http://code.google.com/p/conemu-maximus5/issues/detail?id=1808" target="_blank">Issue 1808</a> on the project site,
 you may suggest other methods there.</div>
 
@@ -94,7 +96,7 @@ AFAIK coinbase allows payments from linked Visa cards with US billing address.</
 <h2><a href="http://www.wmtransfer.com/">WebMoney transfer</a></h2>
 <div class="text stext">Wallets: <strong>Z190363130005</strong>, <strong>E294160643493</strong>, <strong>R407008788841</strong>.</div>
 
-<h2><a href="https://money.yandex.ru">Yandex.Money</a></h2>
+<h2><a name="yandex" href="https://money.yandex.ru">Yandex.Money</a></h2>
 <div class="text stext">
 Wallet: <strong>4100 1198 3971 991</strong>, the currency is Russian Rubles.<br>
 <!--10 USD ≈ 580 RUB, 10 EUR ≈ 710 RUB.<br>-->
