Donate page updated

--- a/donate.html
+++ b/donate.html
@@ -70,10 +70,11 @@
 <h1 id="h0">Support ConEmu</h1>
 
 <h2>PayPal</h2>
-<div class="text">Unfortunately, PayPal donations are not accepted to Russian accounts.</div>
-<!--<img src="./img/email.png">-->
-<div class="text">If you can't use <a href="#yandex">Yandex.Money</a> or other methods please <a href="email:ConEmu.Maximus5@gmail.com">contact me</a> and I will send you my dedicated PayPal address.</div>
-<div class="text">There is an <a href="http://code.google.com/p/conemu-maximus5/issues/detail?id=1808" target="_blank">Issue 1808</a> on the project site,
+<div class="text">Unfortunately, PayPal <strong>donations</strong> are not accepted to Russian accounts.</div>
+<div class="text">If you can't use <a href="#yandex">Yandex.Money</a> or other methods please contact me by<br>
+e-mail <img style="position: relative; top: 0.25em;" src="./img/email.png"> or twitter <a href="https://twitter.com/intent/user?screen_name=ConEmuMaximus5">@ConEmuMaximus5</a>
+<br>and I will send you my dedicated PayPal address in response.</div>
+<div class="text">There is also an <a href="http://code.google.com/p/conemu-maximus5/issues/detail?id=1808" target="_blank">Issue 1808</a> on the project site,
 you may suggest other methods there.</div>
 
 <h2><a href="http://en.wikipedia.org/wiki/Bitcoin">Bitcoin</a></h2>
@@ -108,7 +109,7 @@ Wallet: <strong>4100 1198 3971 991</strong>, the currency is Russian Rubles.<br>
 </div>
 <div class="text stext">
 Unfortunately this works only for Russia, Azerbaijan, Armenia, Belarus, Kazakhstan, Kyrgyzstan, Tajikistan, Turkmenistan, Uzbekistan, Ukraine.<br>
-After you press ‘Donate’ button you will be passed to https Yandex.Money website to confirm amount and start the transaction.
+After you press ‘Contribute’ button you will be passed to https Yandex.Money website to confirm amount and start the transaction.
 </div>
 <div class="text stext">
 <div class="donatebox">
@@ -132,7 +133,7 @@ After you press ‘Donate’ button you will be passed to https Yandex.Money web
  <input type="radio" name="paymentType" value="PC">Yandex.Money</input>
 </td></tr>
 <tr><td colspan="2" align="center">
- <input type="submit" name="submit-button" value="Donate">
+ <input type="submit" name="submit-button" value="Contribute">
 </td></tr>
 </table>
 </form>
