Change twitter link

--- a/donate.html
+++ b/donate.html
@@ -72,7 +72,7 @@
 <h2>PayPal</h2>
 <div class="text">Unfortunately, PayPal <strong>donations</strong> are not accepted to Russian accounts.</div>
 <div class="text">If you can't use <a href="#yandex">Yandex.Money</a> or other methods please contact me by<br>
-e-mail <img style="position: relative; top: 0.25em;" src="./img/email.png"> or twitter <a href="https://twitter.com/intent/user?screen_name=ConEmuMaximus5">@ConEmuMaximus5</a>
+e-mail <img style="position: relative; top: 0.25em;" src="./img/email.png"> or twitter <a href="https://twitter.com/ConEmuMaximus5">@ConEmuMaximus5</a>
 <br>and I will send you my dedicated PayPal address in response.</div>
 <div class="text">There is also an <a href="http://code.google.com/p/conemu-maximus5/issues/detail?id=1808" target="_blank">Issue 1808</a> on the project site,
 you may suggest other methods there.</div>
