--- a/donate.html
+++ b/donate.html
@@ -70,12 +70,12 @@
 <h1 id="h0">Support ConEmu</h1>
 
 <h2>PayPal</h2>
-<div class="text">Unfortunately, PayPal <strong>donations</strong> are not accepted to Russian accounts.</div>
 <div class="text">If you can't use <a href="#yandex">Yandex.Money</a> or other methods please contact me by<br>
 e-mail <img style="position: relative; top: 0.25em;" src="./img/email.png"> or twitter <a href="https://twitter.com/ConEmuMaximus5">@ConEmuMaximus5</a>
 <br>and I will send you my dedicated PayPal address in response.</div>
-<div class="text">There is also an <a href="http://code.google.com/p/conemu-maximus5/issues/detail?id=1808" target="_blank">Issue 1808</a> on the project site,
-you may suggest other methods there.</div>
+<div class="text">That is because PayPal <strong>donations</strong> are not accepted to Russian accounts,<br>
+check an <a href="http://code.google.com/p/conemu-maximus5/issues/detail?id=1808" target="_blank">Issue 1808</a> on the project site for details,<br>
+or you may suggest other methods there.</div>
 
 <h2><a href="http://en.wikipedia.org/wiki/Bitcoin">Bitcoin</a></h2>
 <div class="text stext">Bitcoin is digital currency based on open-source software.
