Minor change in PayPal dontaions text

--- a/donate.html
+++ b/donate.html
@@ -72,7 +72,8 @@
 <h2>PayPal</h2>
 <div class="text">If you can't use <a href="#yandex">Yandex.Money</a> or other methods please contact me by<br>
 e-mail <img style="position: relative; top: 0.25em;" src="./img/email.png"> or twitter <a href="https://twitter.com/ConEmuMaximus5">@ConEmuMaximus5</a>
-<br>and I will send you my dedicated PayPal address in response.</div>
+<br>and I will send you my dedicated PayPal address in response,<br>
+which may be used for ‘sending money to family or friends’.</div>
 <div class="text">That is because PayPal <strong>donations</strong> are not accepted to Russian accounts,<br>
 check an <a href="http://code.google.com/p/conemu-maximus5/issues/detail?id=1808" target="_blank">Issue 1808</a> on the project site for details,<br>
 or you may suggest other methods there.</div>
