Apply formatting to the root pages

--- a/auto.html
+++ b/auto.html
@@ -22,7 +22,7 @@
   ga('send', 'pageview');
 
 </script>
- 
+
 </head>
 
 <body>
@@ -116,11 +116,18 @@ setup ConEmu via PowerShell with single command. Internet connection required.</
 				<div class="blockcontent">
 					<ul>
 					<!-- Menu starts -->
+					<!-- Add ' class="MenuItemA" ' to current <a> item -->
 					<li><a href="./index.html"><span>Home</span></a></li>
 					<li><a href="http://www.fosshub.com/ConEmu.html"><span>Download</span></a></li>
+					<li><a href="./en/TableOfContents.html"><span>Documentation</span></a></li>
+					<li><a href="./en/Screenshots.html"><span>Screenshots</span></a></li>
+					<li><a href="./en/Settings.html"><span>Setting</span></a></li>
 					<li><a class="MenuItemA" href="./auto.html"><span>Auto install</span></a></li>
 					<li><a href="./donate.html"><span>Donate</span></a></li>
-					<li><a href="https://code.google.com/p/conemu-maximus5/wiki/TableOfContents?tm=6"><span>Documentation</span></a></li>
+					<li><a href="./en/AnsiEscapeCodes.html"><span>ANSI</span></a></li>
+					<li><a href="./en/Awards.html"><span>Awards</span></a></li>
+					<li><a href="./en/Delusions.html"><span>Delusions</span></a></li>
+					<li><a href="https://github.com/Maximus5/ConEmu"><span>Source code</span></a></li>
 					<!-- Menu ends -->
 					</ul>
 				</div>
