--- a/ru/LaunchNewTab.html
+++ b/ru/LaunchNewTab.html
@@ -67,8 +67,20 @@
 
 <!-- Content starts -->
 
-<p><font size="5"><strong>Launching applications in ConEmu</strong></font> <ul><ul><li><a href="#"></a></li><li><a href="#Create_new_console_dialog">Create new console dialog</a></li><ul><li><a href="#Create_new_console_without_dialog">Create new console without dialog</a></li></ul><li><a href="#"></a></li><li><a href="#Create_new_tab_from_existing_one">Create new tab from existing one</a></li><li><a href="#Duplicate_root">Duplicate root</a></li><li><a href="#Default_terminal_feature">Default terminal feature</a></li><li><a href="#Attach_existing_console_or_GUI_application">Attach existing console or GUI application</a></li><li><a href="#Attach_from_command_prompt">Attach from command prompt</a></li><li><a href="#Automatic_attach_of_cmd">Automatic attach of cmd</a></li><li><a href="#Gui_Macro">Gui Macro</a></li></ul></ul> </p>
-<h2 id="h0"><a name=""></a><a href="ConEmuArgs.html">Using ConEmu switches</a></h2>
+<h2 id="h0">Launching applications in ConEmu</h2>
+<p>
+	<ul><li><a href="#Create_new_console_dialog">Create new console dialog</a></li>
+		<ul><li><a href="#Create_new_console_without_dialog">Create new console without dialog</a></li></ul>
+		<li><a href="#Create_new_tab_from_existing_one">Create new tab from existing one</a></li>
+		<li><a href="#Duplicate_root">Duplicate root</a></li>
+		<li><a href="#Default_terminal_feature">Default terminal feature</a></li>
+		<li><a href="#Attach_existing_console_or_GUI_application">Attach existing console or GUI application</a></li>
+		<li><a href="#Attach_from_command_prompt">Attach from command prompt</a></li>
+		<li><a href="#Automatic_attach_of_cmd">Automatic attach of cmd</a></li>
+		<li><a href="#Gui_Macro">Gui Macro</a></li>
+	</ul>
+</p>
+<h2><a name=""></a><a href="ConEmuArgs.html">Using ConEmu switches</a></h2>
 <p>When you run something from <tt>Win+R</tt> or shortcut from your Desktop, you may use <tt>-cmd</tt> or <tt>-cmdlist</tt> to run your application. Remember, <tt>-cmd</tt> or <tt>-cmdlist</tt> will be the last <a href="ConEmu.html">ConEmu</a>&#x27;s GUI interpreted switch. The rest of command line will be used to start your application. Read more in the <a href="ConEmuArgs.html">wiki</a>. Example: </p>
 <blockquote><a href="ConEmu.html">ConEmu</a> -reuse -dir &quot;c:\projects&quot; -cmd &quot;set PATH=C:\MinGW\bin;%PATH%&quot; &amp; chcp 65001 &amp; sh -l -i 
 </blockquote><h2><a name="Create_new_console_dialog"></a>Create new console dialog<a href="#Create_new_console_dialog" class="section_anchor"></a></h2>
