--- a/en/ClipFixer.html
+++ b/en/ClipFixer.html
@@ -67,6 +67,11 @@
 
 <!-- Content starts -->
 
+<!--
+	Far Manager plugin, copied from googlecode wiki
+	This page is hidden from search engines
+-->
+
 <p><a href="http://code.google.com/p/conemu-maximus5/downloads/list?q=summary:ClipFixer" rel="nofollow">Download (Far2 x86/x64)</a> </p>
 <h3 id="h0"><a name="About"></a>About<a href="#About" class="section_anchor"></a></h3>
 <p>When you get broken text, while pasting from Windows clipboard to the Far 2, you may use this plugin, which fix clipboard contents. </p>
