--- a/en/Command_Line.html
+++ b/en/Command_Line.html
@@ -67,6 +67,10 @@
 
 <!-- Content starts -->
 
+<!--
+	This page is hidden from search engines
+-->
+
 <p>The article moved here: <a href="ConEmuArgs.html">ConEmuArgs</a>. </p>
 
 <!-- Content ends -->
