--- a/en/ConEmuHelping.html
+++ b/en/ConEmuHelping.html
@@ -68,18 +68,31 @@
 <!-- Content starts -->
 
 <h1 id="h0"><a name="Documentation"></a>Documentation<a href="#Documentation" class="section_anchor"></a></h1>
-<p>Документация, как ее видит пользователь: <a href="http://code.google.com/p/conemu-maximus5/wiki/TableOfContents" rel="nofollow">wiki</a> </p>
-<p>Исходники страниц wiki можно смотреть через <a href="http://conemu-maximus5.googlecode.com/svn/wiki/" rel="nofollow">браузер (http)</a> или через svn </p>
-<pre class="prettyprint">svn checkout http://conemu-maximus5.googlecode.com/svn/trunk/ conemu-maximus5-read-only</pre>
-<p>Русские версии страничек лежат в подпапке ‘ru’. </p>
-<p>Диалоги (настройка) содержатся в файле <a href="https://github.com/Maximus5/ConEmu/blob/alpha/src/ConEmu/ConEmu.rc" rel="nofollow">ConEmu.rc</a> а подсказки к ним и описания для хоткеев в файле <a href="https://github.com/Maximus5/ConEmu/blob/alpha/src/ConEmu/ConEmu.rc2" rel="nofollow">ConEmu.rc2</a>. </p>
+
+<p>Documentation seen by user: <a href="http://conemu.github.io/en/TableOfContents.html">TableOfContents.html</a> </p>
+
+<p>Page sources: <a href="https://github.com/ConEmu/ConEmu.github.io">github.com</a></p>
+
+<p>English pages are located in ‘en’ subfolder. </p>
+
+<p>All settings dialogs are stored in the file <a href="https://github.com/Maximus5/ConEmu/blob/alpha/src/ConEmu/ConEmu.rc" rel="nofollow">ConEmu.rc</a> and tooltips for their controls in the file <a href="https://github.com/Maximus5/ConEmu/blob/alpha/src/ConEmu/ConEmu.rc2" rel="nofollow">ConEmu.rc2</a>. </p>
+
+<!--
 <p>Список Issue по правке/вычитке/написанию: <a href="http://code.google.com/p/conemu-maximus5/issues/list?can=1&amp;q=Type%3DDocumentation" rel="nofollow">здесь</a>. </p>
-<h2><a name="Почему_так_все_запущено"></a>Почему так все запущено<a href="#Почему_так_все_запущено" class="section_anchor"></a></h2>
-<p>Многие странички писались в течение длительного времени, по мере возможности, на языке на котором &quot;подумалось&quot;, кое-что вообще копипастилось. Как всегда все упирается во время, лишнего ни у кого не наблюдается. Тот же Whatsnew - стараюсь писать на английском, потому что переводить времени нет, даже обновить русскую версию странички перед выкладкой новой сборки... голова не всегда соображает как сказать по-русски то что на английском в 3 слова влезло. </p>
-<h2><a name="Как_помочь_с_документацией"></a>Как помочь с документацией<a href="#Как_помочь_с_документацией" class="section_anchor"></a></h2>
-<p>Если у вас есть возможность и свободное время - welcome. </p>
-<ul><li>Видите грамматическую ошибку в интерфейсе? </li><li>Можете предложить лучший вариант текста? </li><li>Можете перевести/поправить/дописать страничку документации? </li></ul><p>Есть множество путей прислать исправления. </p>
-<ul><li>Создать новый <a href="http://code.google.com/p/conemu-maximus5/issues/entry?template=Documentation" rel="nofollow">Issue типа Documentation</a> (предпочтительно в большинстве случаев) </li><li>Прислать мне e-mail </li><li>Если вы готовы на неоднократную помощь - можно дать вам привилегию на правку wiki, подробнее <a href="http://code.google.com/p/conemu-maximus5/issues/detail?id=609#c1" rel="nofollow">здесь</a>. </li></ul>
+-->
+
+<h2><a name="Why_it_is_so_hard"></a>Why it is so hard<a href="#Why_it_is_so_hard" class="section_anchor"></a></h2>
+
+<p>Many pages were written during long time, by occasion, in my free time, in language I was &quot;thinking&quot; at that moment. For example, I'm writing <a href="http://conemu.github.io/en/Whats_New.html">WhatsNew</a> in English because there is no time to translate it or write in two languages simultaneously. </p>
+
+<h2><a name="How_to_help"></a>How you can help with documentation<a href="#How_to_help" class="section_anchor"></a></h2>
+
+<p>If anyone has free time and wish to help - you are welcome. </p>
+
+<p>Have you seen spelling error in the program interface? Fork the <a href="https://github.com/Maximus5/ConEmu">project</a> and send me <a href="https://github.com/Maximus5/ConEmu/pulls">pull request</a>. </p>
+
+<p>Can you suggest better translation or add some text to the documentation?
+Send me <a href="https://github.com/ConEmu/ConEmu.github.io/pulls">pull request</a> on the project site. </p>
 
 <!-- Content ends -->
 
