--- a/ru/Delusions.html
+++ b/ru/Delusions.html
@@ -69,18 +69,22 @@
 
 <h1 id="h0">Два околоконсольных заблужения</h1>
 
-<ol>
- <li>Называть PUTTY, mintty и др. консольными приложениями.</li>
- <li>Называть стандартную консоль Windows - cmd.exe.</li>
-</ol>
 
-<p>Консольное приложение это специальным образом созданное приложение которое взаимодействует с &quot;пользователем&quot; только посредством ввода-вывода данных (например текста). По умолчанию КП не умеет ничего &quot;отрисовывать&quot;, у него вообще нет графического интерфейса. Оно работает ТОЛЬКО с потоками ввода-вывода (перенаправление, пайпы, волшебные символы ‘<b>&lt;</b>’, ‘<b>&gt;</b>’, ‘<b>|</b>’).</p>
+<h2>Называть PuTTY, mintty и др. консольными приложениями.</h2>
+
+<p>Упрощая, консольное приложение это специальным образом созданное приложение которое взаимодействует с &quot;пользователем&quot; только посредством ввода-вывода данных (например текста). По умолчанию КП не умеет ничего &quot;отрисовывать&quot;, у него вообще нет графического интерфейса. Оно работает ТОЛЬКО с потоками ввода-вывода (перенаправление, пайпы, волшебные символы ‘<b>&lt;</b>’, ‘<b>&gt;</b>’, ‘<b>|</b>’).</p>
 
 <code>cmd /? > cmd.log & type cmd.log | find "HKEY"</code>
 
 <p>При запуске такого приложения в Windows создается специальное консольное окно и именно оно занимается отрисовкой текста, выводимого КП, и перенаправлением нажимаемых пользователем клавиш в буфер ввода КП. Это консольное окно также называется терминалом.</p>
 
-<p>PUTTY, KITTY, mintty и другие терминалы НЕ являются консольными приложениями. Это графические приложения (имеющие свой графические интерфейс) умеющие либо подключаться к удаленным серверам для запуска консольных приложений удаленно, либо работают как локальные терминалы, предоставляя возможности ввода-вывода консольным приложениям на локальном компьютере. Вы не можете перенаправить &quot;вывод&quot; терминала в файл, т.к терминал работает с дисплеем и клавиатурой, а не с потоками ввода-вывода. Исключение - логирование, настраиваемое специально в самом терминале.</p>
+<p>PuTTY, KiTTY, mintty и другие терминалы НЕ являются консольными приложениями. Это графические приложения (имеющие свой графические интерфейс) умеющие либо подключаться к удаленным серверам для запуска консольных приложений удаленно, либо работают как локальные терминалы, предоставляя возможности ввода-вывода консольным приложениям на локальном компьютере. </p>
+
+<p>Вы не можете перенаправить &quot;вывод&quot; терминала в файл, т.к терминал работает с дисплеем и клавиатурой, а не с потоками ввода-вывода.
+Исключение - логирование, настраиваемое специально в самом терминале.</p>
+
+
+<h2>Называть стандартную консоль Windows - cmd.exe.</h2>
 
 <p>В Windows есть встроенный терминал (или &quot;консольное окно&quot;) которое часто ошибочно называют &quot;cmd.exe&quot;. Нажмите Win+R и запустите, например, &quot;powershell.exe&quot;. Среди запущенных процессов не будет &quot;cmd.exe&quot;. В разных версиях Windows консольное окно создают разные процессы, в актуальных – это &quot;conhost.exe&quot;.</p>
 
