--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" >
  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" >
+ <meta name='yandex-verification' content='5bb2b6c69957dc18' />
 
  <link rel="icon" type="image/vnd.microsoft.icon" href="./conemu.ico">
 
