--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" >
  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" >
  <meta name='yandex-verification' content='5bb2b6c69957dc18' />
+ <meta name="msvalidate.01" content="C3DA7A77EADF40C2ABF460748978E8F9" />
 
  <link rel="icon" type="image/vnd.microsoft.icon" href="./conemu.ico">
 
