--- a/en/NamedPipes.html
+++ b/en/NamedPipes.html
@@ -68,7 +68,7 @@
 <!-- Content starts -->
 
 <p>Article is under construction </p>
-<p><a title="Windows 8 - x64 Edition of EMU.... using process Hacker to monitor ConEMU" class=closed_ref href="/p/conemu-maximus5/issues/detail?id=820">&nbsp;Issue 820&nbsp;</a>, <a title="Процессы ConEmuC(32/64) беспрерывно осуществляют дисковую активность в районе 2.5Mb/s…" class=closed_ref href="/p/conemu-maximus5/issues/detail?id=1241">&nbsp;Issue 1241&nbsp;</a> </p>
+<p><a title="Windows 8 - x64 Edition of EMU.... using process Hacker to monitor ConEMU" class=closed_ref href="http://code.google.com/p/conemu-maximus5/issues/detail?id=820">&nbsp;Issue 820&nbsp;</a>, <a title="Процессы ConEmuC(32/64) беспрерывно осуществляют дисковую активность в районе 2.5Mb/s…" class=closed_ref href="http://code.google.com/p/conemu-maximus5/issues/detail?id=1241">&nbsp;Issue 1241&nbsp;</a> </p>
 
 <!-- Content ends -->
 
