--- a/ru/Settings.html
+++ b/ru/Settings.html
@@ -107,7 +107,7 @@
 <pre class="prettyprint">/icon &quot;cmd.exe&quot;</pre>
 <p>и рабочую папку, в которой будет запущен указанный процесс, например </p>
 <pre class="prettyprint">/dir &quot;c:\Program Files&quot;</pre>
-<p>После настройки списка задач включите флажок «Add ConEmu tasks to taskbar» и (по желанию) «Add commands from history, too». Нажмите кнопку «Update Now!». В случае успеха вы увидите сообщение «Taskbar jump list was updated successfully», ну или сообщение об ошибке. Есть способ инициировать Jump list при запуске ConEmu (<a title="Jump Lists/Task window problem" class=closed_ref href="/p/conemu-maximus5/issues/detail?id=576">&nbsp;Issue 576&nbsp;</a>, может кому еще понадобится для автоматизации установки, например) для этого запустите (однократно) ConEmu.exe с аргументом &quot;<tt>/updatejumplist</tt>&quot;. </p>
+<p>После настройки списка задач включите флажок «Add ConEmu tasks to taskbar» и (по желанию) «Add commands from history, too». Нажмите кнопку «Update Now!». В случае успеха вы увидите сообщение «Taskbar jump list was updated successfully», ну или сообщение об ошибке. Есть способ инициировать Jump list при запуске ConEmu (<a title="Jump Lists/Task window problem" class=closed_ref href="http://code.google.com/p/conemu-maximus5/issues/detail?id=576">&nbsp;Issue 576&nbsp;</a>, может кому еще понадобится для автоматизации установки, например) для этого запустите (однократно) ConEmu.exe с аргументом &quot;<tt>/updatejumplist</tt>&quot;. </p>
 <h2><a name="ComSpec"></a>ComSpec<a href="#ComSpec" class="section_anchor"></a></h2>
 <p><img src="../img/SettingsComspec.png" title="ConEmu settings, Comspec page" alt="ConEmu settings, Comspec page"> </p>
 <h2><a name="Features"></a>Features<a href="#Features" class="section_anchor"></a></h2>
