--- a/ru/CygwinStartDir.html
+++ b/ru/CygwinStartDir.html
@@ -71,7 +71,7 @@
 <i>cygwin, mingw, ConEmu and start up directory</i>
 -->
 <p>One of the most asked questions about cygwin using - how to run its shell in the specified working directory. </p>
-<p>Finally, thanks to csbdess, <a title="can't set working dir for cygwin consoles from commandline" class=closed_ref href="/p/conemu-maximus5/issues/detail?id=1552">&nbsp;Issue1552&nbsp;</a>#15, the problem was identified. </p>
+<p>Finally, thanks to csbdess, <a title="can't set working dir for cygwin consoles from commandline" class=closed_ref href="http://code.google.com/p/conemu-maximus5/issues/detail?id=1552">&nbsp;Issue1552&nbsp;</a>#15, the problem was identified. </p>
 <p>Cygwin always do ‘<tt>cd &quot;${HOME}&quot;</tt>’ from <tt>/etc/profile</tt>. </p>
 <pre class="prettyprint"># Make sure we start in home unless invoked by CHERE
 if [ ! -z &quot;${CHERE_INVOKING}&quot; ]; then
