--- a/ru/RoadMap.html
+++ b/ru/RoadMap.html
@@ -78,7 +78,7 @@
 <p>ConEmu can store itself settings in xml file already. However, it is possible to hook registry functions, so any (console or GUI) application, started in ConEmu tab become portable. </p>
 <p>This portion of code exists but not perfect. So, it is disabled in release versions. </p>
 <h2><a name="Tab_groups_and_themes"></a>Tab groups and themes<a href="#Tab_groups_and_themes" class="section_anchor"></a></h2>
-<p><a title="Themes, skins, tabs"  href="/p/conemu-maximus5/issues/detail?id=294">Issue 294</a>, <a title="Double view / Split screen concept" class=closed_ref href="/p/conemu-maximus5/issues/detail?id=194">&nbsp;Issue 194&nbsp;</a>. <ul><li>Tabs and toolbar themes </li><li>Tabs reordering </li><li>Tab groups (multiple visible consoles) </li><li>Custom icons (icon of active process) in tabs </li></ul></p>
+<p><a title="Themes, skins, tabs"  href="http://code.google.com/p/conemu-maximus5/issues/detail?id=294">Issue 294</a>, <a title="Double view / Split screen concept" class=closed_ref href="http://code.google.com/p/conemu-maximus5/issues/detail?id=194">&nbsp;Issue 194&nbsp;</a>. <ul><li>Tabs and toolbar themes </li><li>Tabs reordering </li><li>Tab groups (multiple visible consoles) </li><li>Custom icons (icon of active process) in tabs </li></ul></p>
 <h2><a name="Advertising"></a>Advertising<a href="#Advertising" class="section_anchor"></a></h2>
 <p>I hope, ConEmu is stable enough and competitive with other console emulators. </p>
 <h2><a name="Virtual_console_buffer"></a>Virtual console buffer<a href="#Virtual_console_buffer" class="section_anchor"></a></h2>
